	* Set cell format for percentiles in rank and percentile tool
	* Fix crash on copy between different invocations of gnumeric
	* Fix search in comments (# 65159)
	* Fix crash in parser (# 65896)
	* Format all numbers preentered in analysis tools dialogs
	  according to locale (# 65404)
	* In histogram tool add percentage column and format all 
	  percentages appropriately (# 62164)

Jody:
	* Tricky corner cases for style applications.
	* Rework sheetname quoting (Good idea Andreas)
	* Support multiple expressions in the parser and clean up
	  expression lists.
	* Memory error when parsing names.
	* Fix xml storage of parse position for names.
	* sync print code with draw code for merges.

Morten:
	* Fix EXPRESSION crash.
	* Fix 65577.

--------------------------------------------------------------------------
Gnumeric 0.76

Alex Barnes:
	* Autofill backwards.

Andreas:
	* Fix handling of missing observations in F-test, z-test,
	  one-factor ANOVA, histogram, regression, and t-tests analysis 
          tools.
	* Permit input from other sheets in F-test, z-test, one-factor 
	  ANOVA, histogram, regression, and t-tests analysis tools.
	* Fix small errors in F-test, z-test, one-factor 
	  ANOVA, Desc. Stats. and t-tests analysis tools.
	* Improve Exponential Smoothing and Moving Averages tools.
	* Implement pareto and labels in histogram tool.
        * Use confidence level in regression tool.
	* Use format parsing in entry fields of analysis tools.

Jody:
	* More work on the expr entry.
	* Fix outline mode. 
	* Add keyboard support to sheet objects.
	* Add warning when xls imports non-ole file.
	* Continue audit and clean out some old code.
	* Validate autoformat template before storing undo.
	* Fix leaks.
	* Fix centering while printing scaled regions.
	* Tricky corner cases for style applications.
	* Break lines at hyphens to.
	* Disable col/row resize while editing.
	* Make some dialogs resizable.
	* Fix comment placement for merged cells.